# Clases-python

./: .gitignore  00_Intro.ipynb  01MIAR_02_Python101_DataTypes.ipynb  02_Variables_dataTypes copy.ipynb  02_Variables_dataTypes.ipynb  03_operradores.ipynb  04_estructuras_de_control.ipynb  05_funciones.ipynb  06_listas_diccionarios.ipynb  07_POO1.ipynb  08_numpy.ipynb  09_pandas.ipynb  10_10_ejercicios_python.ipynb  Pipfile  README.md  Untitled.ipynb  Untitled1.ipynb  a.md  a.py  b.py  d.py  data.json  deberes2_Problema1.py  deberes2_Problema2.py  hola.py  main.py
ValenBisi/: estudioBicisValencia.ipynb
chrem_fact/: a.md  result.py
chrem_fact/bombas/: axial.py  bomba.py  centrifuga.py
chrem_fact/reactor/: reactor.py
chrem_fact/reactor/continuo/: csrt.py  pfr.py
chrem_fact/reactor/descontinuo/: bacht.py
chrem_fact/separacion/: separacion.py
deberes/: deberes 2.txt  tema 0.txt  tema_0.md
deberes/ejercicios_1_pseudocodigo/: tema_0.md
deberes/ejercicios_2_primeros_pasos_python/: adivinanza.py  cuadrado.py  dibuja_cuadrado.md  maquina.py  maquina_monedas.md  pass.md  tema_1_pseudocodigos.md
deberes/ejercicios_3_funciones/: 1_saludos.md
deberes/ejercicios_4_listas y diccionarios/: 1_saludo2.md  2_pares.md  3_frecuencia.md  4_calificaciones.md  analisis_compra.md
deberes/ejercicios_5_numpy/: 100-numpy.md
deberes/tema_1/: tema_1.md  tema_1.py  tema_1.txt
img/inicio/: sintaxis.enc
mi_proyecto/: pyproject.toml  requirements.txt  setup.py
mi_proyecto/mi_proyecto/: calculador_precios.py  registrar_hoteles.py  visualizador.py
(+22 files in other folders)
