[project]
name = "mi-proyecto"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (==2.3.2)",
    "requests (==2.31.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (==2.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
